2010-09-28  Anitha Boyapati  <anitha.boyapati@atmel.com>

	* include/avr/iotn88.h: Fix RAMEND.

2010-09-22  Anitha Boyapati  <anitha.boyapati@atmel.com>

	* doc/examples/twitest/twitest.c: Fix endaddr calculation
	in ee24xx_write_page function.

2010-09-22  Anitha Boyapati  <anitha.boyapati@atmel.com>

	* doc/examples/stdiodemo/defines.h: Modify comment

2010-09-22  Anitha Boyapati  <anitha.boyapati@atmel.com>

	Fix for bugs #30552 and #30569. 
	Thanks to Frederic Nadeau for the patch.
	* include/avr/iom16u4.h: Modify ADCTS3 to 3.
	* include/avr/iom32u4.h: Add definition for ADCW.
	Add__ASSEMBLER__ macro for ADC.
	Modify ADCTS3 to 3
	* include/avr/iotn43u.h: Add definition for ADCW.
	Add__ASSEMBLER__ macro for ADC.

2010-09-21  Anitha Boyapati  <anitha.boyapati@atmel.com>

	* include/avr/io90pwm2b.h: Modified SPM_PAGESIZE to 64 bytes.
	* include/avr/io90pwm3b.h: Same.

2010-09-20  Anitha Boyapati  <anitha.boyapati@atmel.com>

	* include/iom16m1.h: Add definitions for CANSIT, CANIDT and
	CANIDM.
	* include/iom32m1.h: Same.
	* include/iom64m1.h: Same.
	* include/iom32c1.h: Same.
	* include/iom64c1.h: Same.

2010-09-20  Anitha Boyapati  <anitha.boyapati@atmel.com>

	* include/avr/wdt.h: Add definitions for ATmega325P and
	ATmega3250P

2010-08-22  Eric B. Weddington  <eric.weddington@atmel.com>

	Atmel internal issue.
	* include/avr/iotn87.h (BODS, BODSE): Fix value.
	* include/avr/iotn167.h (BODS, BODSE): Same.

2010-08-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Andr'e:
	bug #30783 Missing prototype in power.h
	* include/avr/power.h: Add prototype for clock_prescale_set()
	for the second block (prescaler reachable by IN/OUT
	instructions).

2010-06-24  Eric B. Weddington  <eric.weddington@atmel.com>

	* include/avr/Makefile.am (avr_HEADERS): Add iom3000.h.

2010-06-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version to 1.7.1, after releasing.

2010-06-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Released avr-libc-1.7.0.
